PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/Lead__c.object-meta.xml
<CustomObject>
    <label>잠재고객</label>
    <nameField>
        <label>이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>