PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>변환 시 &apos;신규생성=Null&apos; or &apos;Choose Existing Account&apos;</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>잠재고객</relationshipLabel>
    <relationshipName>Lead_Account</relationshipName>
    <type>Lookup</type>
</CustomField>