PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>회사명</label>
    <length>250</length>
    <type>Text</type>
</CustomField>