PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>변환 시 &apos;신규생성=Null&apos; or &apos;Choose Existing Contact&apos;</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>잠재고객</relationshipLabel>
    <relationshipName>Lead_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>