PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/InterestProduct__c.field-meta.xml
<CustomField>
    <fullName>InterestProduct__c</fullName>
    <label>흥미 제품군</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InterestProduct</valueSetName>
    </valueSet>
</CustomField>