PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>웹</fullName>
                <default>true</default>
                <label>Web문의</label>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <label>고객추천</label>
            </value>
            <value>
                <fullName>직접요청</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <label>SFDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>