PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/NewOpportunity__c.field-meta.xml
<CustomField>
    <fullName>NewOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>신규 영업기회 생성시 &apos;True&apos;</inlineHelpText>
    <label>New Opportunity?</label>
    <type>Checkbox</type>
</CustomField>