PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>잠재고객과 연관된 영업기회 선택</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>잠재고객</relationshipLabel>
    <relationshipName>Lead_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>