PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <label>OpportunityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>