PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>솔루션 문의</fullName>
            </value>
            <value>
                <fullName>컨설팅 문의</fullName>
            </value>
            <value>
                <fullName>제휴 문의</fullName>
            </value>
            <value>
                <fullName>유지보수, 하자보수문의</fullName>
            </value>
            <value>
                <fullName>기타 문의</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>