PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/WebMessage__c.field-meta.xml
<CustomField>
    <fullName>WebMessage__c</fullName>
    <label>문의 내용</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>