PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/fields/WebSubject__c.field-meta.xml
<CustomField>
    <fullName>WebSubject__c</fullName>
    <label>문의 제목</label>
    <length>250</length>
    <type>Text</type>
</CustomField>