PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WebSubject__c</columns>
    <columns>Company__c</columns>
    <columns>Type__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>LeadSource__c</columns>
    <columns>PersonalInformationUseAgreement__c</columns>
    <columns>PersonalInformationUseAgreementDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>