PA_Education/TestMenifest/force-app/main/default/objects/Lead__c/listViews/Convert_Lead.listView-meta.xml
<ListView>
    <fullName>Convert_Lead</fullName>
    <columns>NAME</columns>
    <columns>WebSubject__c</columns>
    <columns>Company__c</columns>
    <columns>InterestProduct__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>LeadSource__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <label>변환된 잠재고객</label>
</ListView>